app/private/styles/reuseable/reUseable.less
// ----------------------------------------------------------------------
  // padding
// ---

.padding-none {
    padding: 0px !important;
}

.padding-top-none {
    padding-top: 0px !important;
}

.padding-left-right-0 {
    padding-left: 0px !important;
    padding-right: 0px !important;
}

.padding-top-bottom-0 {
    padding-top : 0px !important;
    padding-bottom: 0px !important;
}

.padding-bottom-15 {
    padding-bottom: 15px !important;
}

.padding-top-10 {
    padding-top: 10px !important;
}
.padding-top-20 {
    padding-top: 20px !important;
}
.padding-top-30 {
    padding-top: 30px !important;
}
.padding-topBottom-20 {
    padding: 10px 0px!important;
}

.padding-left-25 {
    padding-left: 25px !important;
}

.padding-topBottom-35 {
    padding: 35px 0px!important;   
}

.padding-topBottomNone {
    padding-top:0px!important;
    padding-bottom:0px!important;
}

.padding-all-10{
    padding:10px!important;
}

.padding-bottom-5{
    padding-bottom:5px!important;
}
.padding-bottom-10{
    padding-bottom:10px!important;
}

.padding-bottom-none {
    padding-bottom: 0px!important;
}

.padding-right-28{
    padding-right:28px!important;
}
.padding-right-20{
    padding-right:20px!important;
}
.padding-left-10{
    padding-left:10px!important;
} 

.padding-right-none {
    padding-right: 0px!important;
} 
// ----------------------------------------------------------------------
  // margin
// ---

.margin-none {
    margin: 0em !important;
}

.margin-top-0 {
    margin-top: 0px !important;
}

.margin-bottom-0 {
    margin-bottom: 0px !important;
}

.margin-left-right-0 {
    margin-left: 0px !important;
    margin-right: 0px !important;
}

.margin-top--5 {
    margin-top: 5px !important;
}

.margin-left-right-10 {
    margin-left: 10px !important;
    margin-right: 10px !important;
}

.margin-top-10 {
    margin-top: 10px !important;
}

.margin-top-15 {
    margin-top: 15px !important;
}

.margin-bottom-10 {
    margin-bottom: 10px !important;
}

.margin-bottom-15 {
    margin-bottom: 15px !important;
}

.margin-bottom-20 {
    margin-bottom: 20px !important;
}

.margin-top-20 {
    margin-top: 20px !important;
}

.margin-auto {
    margin: auto !important;
}

.margin-right-10 {
    margin-right: 10px !important;
}

.margin-right-20 {
    margin-right: 20px !important;
}

.margin-right-15 {
    margin-right: 15px !important;
}

.margin-left-20 {
    margin-left: 20px !important;
}

.margin-left-25
 {
    margin-left: 25px !important;
}

.margin-left-30
 {
    margin-left: 30px !important;
}

.margin-top-30 {
    margin-top: 30px !important;
}

.margin-bottom-30 {
    margin-bottom: 30px !important;
}


.margin-top-3rem {
    margin-top: -3rem !important;
}

.margin-top-40 {
    margin-top: 40px !important;
}


.margin-top-Negative30 {
    margin-top: -30px !important;
}


// ----------------------------------------------------------------------
  // alignment
// ---

.text-align-right {
    text-align: right !important;
}

.text-decoration-underline {
	text-decoration: underline !important;
}

.float-ContentLeft {
	float:left !important;
}

.float-ContentRight {
    float:right !important;
}

.right-float {
    float: right;
}

.width-100 {
    width: 100% !important;    
}

.height-100 {
    height: 100% !important;
}

.lower-case{
    text-transform: lowercase !important;
}

.cursor-pointer{
    cursor:pointer;
}

.mouse-pointer {
    cursor: pointer;
}

.text-align-center {
    text-align: center !important;
}

.padding-left-50 { 
    padding-left: 3rem !important; 
} 
 
.padding-right-50 { 
    padding-right: 3rem !important; 
} 


// ----------------------------------------------------------------------
  // visibility css
// ---

.contentVisibility-hidden{
    visibility: hidden !important;
}


// ----------------------------------------------------------------------
  // float css
// ---

.right-floated{
    float:right !important;
}

// ----------------------------------------------------------------------
  // blur section css
// ---

.blur-content {
    opacity: 0.2;
    background: #f7f7f7;
    cursor: text;
}
// ----------------------------------------------------------------------
    // disable button css
// ---
.searchdropdown.ui.disabled.button{
    box-shadow: 0 0 0 1px rgba(51, 51, 51, 0.33) inset !important;
}
// ----------------------------------------------------------------------
    // Scroll css changes
// ---
#custom-scroll::-webkit-scrollbar-track
{
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    border-radius: 10px;
    background-color: #F5F5F5;
}

#custom-scroll::-webkit-scrollbar
{
    width: 8px;
    background-color: #F5F5F5;
}

#custom-scroll::-webkit-scrollbar-thumb
{
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
    background-color: #D8D8D8;
}

.overflowContentHorizontal {
    overflow-x: scroll !important;
}

